--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=12345
-DB_NAME=event_booking
+DB_HOST=b1ddb5cn1gtz62xubfco-mysql.services.clever-cloud.com
+DB_USER=usc5u1rzh9mahziv
+DB_PASS=g4NNs7bXcaHefxoObUxG
+DB_NAME=b1ddb5cn1gtz62xubfco
+DB_PORT=3306
 JWT_SECRET=super_secret
 PORT=4000
